packages/yew-attrs-macro/tests/attrs_macro/special-node-ref-fail.rs
use yew_attrs::attrs;

fn compile_fail() {
    attrs! { ref={NodeRef::default()} };
}

fn main() {}
